PJProjekt/NewVersion/obj/Debug/net8.0/ANTLRGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\msi pc\Documents\PythonProjects\PJP\PJProjekt\NewVersion\ANTLRGrammar.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace NewVersion {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class ANTLRGrammarParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, INT_KEYWORD=5, FLOAT_KEYWORD=6, BOOL_KEYWORD=7, 
		STRING_KEYWORD=8, IF=9, ELSE=10, READ=11, WRITE=12, DO=13, WHILE=14, SEMI=15, 
		COMMA=16, DOT=17, NOT=18, MOD=19, MUL=20, DIV=21, ADD=22, SUB=23, ASSIGNMENT=24, 
		COMPARER=25, EQUALITY=26, LOGICALOR=27, LOGICALAND=28, BOOL=29, STRING=30, 
		IDENTIFIER=31, FLOAT=32, INT=33, WS=34, COMMENT=35, LINE_COMMENT=36;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_expr = 2, RULE_primitiveType = 3;
	public static readonly string[] ruleNames = {
		"program", "statement", "expr", "primitiveType"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'('", "')'", "'int'", "'float'", "'bool'", "'string'", 
		"'if'", "'else'", "'read'", "'write'", "'do'", "'while'", "';'", "','", 
		"'.'", "'!'", "'%'", "'*'", "'/'", "'+'", "'-'", "'='", null, null, "'||'", 
		"'&&'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "INT_KEYWORD", "FLOAT_KEYWORD", "BOOL_KEYWORD", 
		"STRING_KEYWORD", "IF", "ELSE", "READ", "WRITE", "DO", "WHILE", "SEMI", 
		"COMMA", "DOT", "NOT", "MOD", "MUL", "DIV", "ADD", "SUB", "ASSIGNMENT", 
		"COMPARER", "EQUALITY", "LOGICALOR", "LOGICALAND", "BOOL", "STRING", "IDENTIFIER", 
		"FLOAT", "INT", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ANTLRGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ANTLRGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 9;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 8; statement();
				}
				}
				State = 11;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << INT_KEYWORD) | (1L << FLOAT_KEYWORD) | (1L << BOOL_KEYWORD) | (1L << STRING_KEYWORD) | (1L << IF) | (1L << READ) | (1L << WRITE) | (1L << DO) | (1L << WHILE) | (1L << SEMI) | (1L << NOT) | (1L << SUB) | (1L << BOOL) | (1L << STRING) | (1L << IDENTIFIER) | (1L << FLOAT) | (1L << INT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EmptyStatementContext : StatementContext {
		public ITerminalNode SEMI() { return GetToken(ANTLRGrammarParser.SEMI, 0); }
		public EmptyStatementContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterEmptyStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitEmptyStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmptyStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WriteIdContext : StatementContext {
		public ITerminalNode WRITE() { return GetToken(ANTLRGrammarParser.WRITE, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public WriteIdContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterWriteId(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitWriteId(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWriteId(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileLoopStatementContext : StatementContext {
		public ITerminalNode WHILE() { return GetToken(ANTLRGrammarParser.WHILE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public WhileLoopStatementContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterWhileLoopStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitWhileLoopStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileLoopStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReadIdContext : StatementContext {
		public ITerminalNode READ() { return GetToken(ANTLRGrammarParser.READ, 0); }
		public ITerminalNode[] IDENTIFIER() { return GetTokens(ANTLRGrammarParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(ANTLRGrammarParser.IDENTIFIER, i);
		}
		public ReadIdContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterReadId(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitReadId(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReadId(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DoWhileContext : StatementContext {
		public ITerminalNode DO() { return GetToken(ANTLRGrammarParser.DO, 0); }
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public ITerminalNode WHILE() { return GetToken(ANTLRGrammarParser.WHILE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public DoWhileContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterDoWhile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitDoWhile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDoWhile(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BlockStatementsContext : StatementContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockStatementsContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterBlockStatements(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitBlockStatements(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockStatements(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeclarationContext : StatementContext {
		public PrimitiveTypeContext primitiveType() {
			return GetRuleContext<PrimitiveTypeContext>(0);
		}
		public ITerminalNode[] IDENTIFIER() { return GetTokens(ANTLRGrammarParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(ANTLRGrammarParser.IDENTIFIER, i);
		}
		public DeclarationContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CondStatementContext : StatementContext {
		public ITerminalNode IF() { return GetToken(ANTLRGrammarParser.IF, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode ELSE() { return GetToken(ANTLRGrammarParser.ELSE, 0); }
		public CondStatementContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterCondStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitCondStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCondStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PrintExprContext : StatementContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public PrintExprContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterPrintExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitPrintExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			State = 80;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INT_KEYWORD:
			case FLOAT_KEYWORD:
			case BOOL_KEYWORD:
			case STRING_KEYWORD:
				_localctx = new DeclarationContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 13; primitiveType();
				State = 14; Match(IDENTIFIER);
				State = 19;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==COMMA) {
					{
					{
					State = 15; Match(COMMA);
					State = 16; Match(IDENTIFIER);
					}
					}
					State = 21;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 22; Match(SEMI);
				}
				break;
			case SEMI:
				_localctx = new EmptyStatementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 24; Match(SEMI);
				}
				break;
			case T__2:
			case NOT:
			case SUB:
			case BOOL:
			case STRING:
			case IDENTIFIER:
			case FLOAT:
			case INT:
				_localctx = new PrintExprContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 25; expr(0);
				State = 26; Match(SEMI);
				}
				break;
			case READ:
				_localctx = new ReadIdContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 28; Match(READ);
				State = 29; Match(IDENTIFIER);
				State = 34;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==COMMA) {
					{
					{
					State = 30; Match(COMMA);
					State = 31; Match(IDENTIFIER);
					}
					}
					State = 36;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 37; Match(SEMI);
				}
				break;
			case WRITE:
				_localctx = new WriteIdContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 38; Match(WRITE);
				State = 39; expr(0);
				State = 44;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==COMMA) {
					{
					{
					State = 40; Match(COMMA);
					State = 41; expr(0);
					}
					}
					State = 46;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 47; Match(SEMI);
				}
				break;
			case T__0:
				_localctx = new BlockStatementsContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 49; Match(T__0);
				State = 51;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 50; statement();
					}
					}
					State = 53;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << INT_KEYWORD) | (1L << FLOAT_KEYWORD) | (1L << BOOL_KEYWORD) | (1L << STRING_KEYWORD) | (1L << IF) | (1L << READ) | (1L << WRITE) | (1L << DO) | (1L << WHILE) | (1L << SEMI) | (1L << NOT) | (1L << SUB) | (1L << BOOL) | (1L << STRING) | (1L << IDENTIFIER) | (1L << FLOAT) | (1L << INT))) != 0) );
				State = 55; Match(T__1);
				}
				break;
			case IF:
				_localctx = new CondStatementContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 57; Match(IF);
				State = 58; Match(T__2);
				State = 59; expr(0);
				State = 60; Match(T__3);
				State = 61; statement();
				State = 64;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					State = 62; Match(ELSE);
					State = 63; statement();
					}
					break;
				}
				}
				break;
			case WHILE:
				_localctx = new WhileLoopStatementContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 66; Match(WHILE);
				State = 67; Match(T__2);
				State = 68; expr(0);
				State = 69; Match(T__3);
				State = 70; statement();
				}
				break;
			case DO:
				_localctx = new DoWhileContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 72; Match(DO);
				State = 73; statement();
				State = 74; Match(WHILE);
				State = 75; Match(T__2);
				State = 76; expr(0);
				State = 77; Match(T__3);
				State = 78; Match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParensContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ParensContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterParens(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitParens(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParens(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CompareContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode COMPARER() { return GetToken(ANTLRGrammarParser.COMPARER, 0); }
		public CompareContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterCompare(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitCompare(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompare(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringContext : ExprContext {
		public ITerminalNode STRING() { return GetToken(ANTLRGrammarParser.STRING, 0); }
		public StringContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterString(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitString(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoolContext : ExprContext {
		public ITerminalNode BOOL() { return GetToken(ANTLRGrammarParser.BOOL, 0); }
		public BoolContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterBool(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitBool(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LgNegationContext : ExprContext {
		public IToken op;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode NOT() { return GetToken(ANTLRGrammarParser.NOT, 0); }
		public LgNegationContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterLgNegation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitLgNegation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLgNegation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignmentContext : ExprContext {
		public ITerminalNode IDENTIFIER() { return GetToken(ANTLRGrammarParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AssignmentContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalAndContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode LOGICALAND() { return GetToken(ANTLRGrammarParser.LOGICALAND, 0); }
		public LogicalAndContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterLogicalAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitLogicalAnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AddSubContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode ADD() { return GetToken(ANTLRGrammarParser.ADD, 0); }
		public ITerminalNode SUB() { return GetToken(ANTLRGrammarParser.SUB, 0); }
		public AddSubContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterAddSub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitAddSub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IANTLRGrammarVisitor<TResult> typedVisitor = visitor as IANTLRGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAddSub(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConcatContext : ExprContext {
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode DOT() { return GetToken(ANTLRGrammarParser.DOT, 0); }
		public ConcatContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.EnterConcat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRGrammarListener typedListener = listener as IANTLRGrammarListener;
			if (typedListener != null) typedListener.ExitConcat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
